Add text to caroussel images and remove last image

--- a/source/_data/banner.yml
+++ b/source/_data/banner.yml
@@ -1,11 +1,11 @@
-- title: ''
+- title: 'Discover the city'
+  teaser: 'Team building'
   path: 'banners/banner-1.jpg'
 
-- title: ''
+- title: 'Eventos de Família'
+  teaser: 'Amizade e União'
   path: 'banners/banner-2.jpg'
 
-- title: ''
+- title: 'Tejus Mega Quiz'
+  teaser: 'Estratégia & Motivação'
   path: 'banners/banner-3.jpg'
-
-- title: ''
-  path: 'banners/banner-4.jpg'
